@@ -55,6 +55,11 @@ N_MINUTES_LATE = 1119
 AUTOFLAG_COMMERCIALS = 1107
 AUTO_EXPIRE = 1108
 ERR_VALUE_BETWEEN = 1123
+USERJOB1_ENABLED = 1124
+USERJOB2_ENABLED = 1125
+USERJOB3_ENABLED = 1126
+USERJOB4_ENABLED = 1127
+
 
 # Recordings Window
 SORT = 853
